# doublecap

./: .gitignore  CMakeLists.txt
analysis/: analyze_shield_sim.py  backgrounds.ipynb  capture_histograms.ipynb  capture_validation.ipynb  gen_histograms.ipynb  gen_histograms.py  lead_optimization.ipynb  plot_histograms.ipynb  rate_calculations.ipynb  rate_calculations.py  resolution.ipynb  shield_optimization.py
analysis/analysis_data/: highmass1-highmass1_pcg.txt  highmass1-highmass2_pcg.txt  highmass1-lowmass_pcg.txt  highmass1_coinc_highmass1xhighmass2.txt  highmass1_coinc_lowmassxhighmass1.txt  highmass1_coinc_lowmassxhighmass1xhighmass2.txt  highmass1_evts_ER.txt  highmass1_evts_Ep.txt  highmass1_evts_Eq.txt  highmass1_evts_NR.txt  highmass2-highmass1_pcg.txt  highmass2-highmass2_pcg.txt  highmass2_coinc_highmass1xhighmass2.txt  highmass2_coinc_lowmassxhighmass1xhighmass2.txt  highmass2_coinc_lowmassxhighmass2.txt  highmass2_evts_ER.txt  highmass2_evts_Ep.txt  highmass2_evts_Eq.txt  highmass2_evts_NR.txt  lowmass-highmass1_pcg.txt  lowmass_coinc_lowmassxhighmass1.txt  lowmass_coinc_lowmassxhighmass1xhighmass2.txt  lowmass_coinc_lowmassxhighmass2.txt  lowmass_evts_ER.txt  lowmass_evts_Ep.txt  lowmass_evts_Eq.txt  lowmass_evts_NR.txt  q_array_10eV.txt  q_array_20eV.txt  q_array_40eV.txt  q_array_80eV.txt  rate_optimization.txt
analysis/analysis_data/cap_sim_cts/: simdata_20250302_113418_t*.root.txt  simdata_20250302_113418_t*.root_Ebins.txt  simdata_20250302_113418_t*root.txt  simdata_20250302_113418_t*root_Ebins.txt
container/: base_env  g4_env  notes.txt  root_env  run_production_job.sh  singularity_setup.sh  submit_prod.sh
figures/: style.mplstyle
include/: DCActionInitialization.hh  DCDetectors.hh  DCEventAction.hh  DCFridge.hh  DCGeometry.hh  DCHit.hh  DCPrimaryGenerator.hh  DCRunAction.hh  DCSensitiveDetector.hh  DCStackingAction.hh  DCTrackAction.hh  DCTrackInformation.hh  DCUtilities.hh
macros/: list-volumes.mac  macro_ogl.mac  macro_tsg.mac  open_interactive.mac  pic.mac  process_setup.mac  prod.mac  regen_figs.sh  repeat_production_run.sh  test_macro.mac  vis.mac  vis100.mac  vis100_2.mac  visbox.mac
src/: CMakeLists.txt  DCActionInitialization.cc  DCDetectors.cc  DCEventAction.cc  DCFridge.cc  DCGeometry.cc  DCHit.cc  DCPrimaryGenerator.cc  DCRunAction.cc  DCSensitiveDetector.cc  DCStackingAction.cc  DCTrackAction.cc  DCTrackInformation.cc  DCUtilities.cc  _DCStackingAction.cc  doublecap.cc
